added an example image of the color-randomization from tilemill

--- a/occupy-streets/legend.html
+++ b/occupy-streets/legend.html
@@ -2,209 +2,208 @@
            <div class='my-legend'>
               <div class='outer'>
                   <div class='inner'>
-		      <div class='labels'><a href='http://directory.occupy.net' target='_blank'>Occupy Directory</a></div>
+		      <div class='labels'><a href='http://directory.occupy.net' target='_blank'>#occupy directory</a></div>
 		      <div class='description'></div>
 		      <div class='source'></div>
                </div>
            </div>
        </div>
 <style type='text/css'>
-@font-face{font-family:'OstrichSansMedium';src:url(http://directory.occupy.net/sites/all/themes/ows/css/ostrichsans/ostrich-regular-webfont.eot);src:url(http://directory.occupy.net/sites/all/themes/ows/css/ostrichsans/ostrich-regular-webfont.eot?#iefix) format('embedded-opentype'),url(http://directory.occupy.net/sites/all/themes/ows/css/ostrichsans/ostrich-regular-webfont.woff) format('woff'),url(http://directory.occupy.net/sites/all/themes/ows/css/ostrichsans/ostrich-regular-webfont.ttf) format('truetype'),url(http://directory.occupy.net/sites/all/themes/ows/css/ostrichsans/ostrich-regular-webfont.svg#OstrichSansMedium) format('svg');font-weight:normal;font-style:normal;}
 
 .wax-legends {
-        max-width:100% !important;
-        max-height:50px !important;
-        width:100% !important;
-        height:100px !important;
-        position:absolute !important;
-	bottom: 0px !important;
-	right: 0px !important;
-		overflow: hidden !important;
-		overflow-y: hidden !important;
-		overflow-x: hidden !important; }
-		
+    max-width: 100% !important;
+    max-height: 50px !important;
+    width: 100% !important;
+    height: 100px !important;
+    position: absolute !important;
+    bottom: 0px !important;
+    right: 0px !important;
+    overflow: hidden !important;
+    overflow-y: hidden !important;
+    overflow-x: hidden !important;
+}
+
 .wax-legend {
-        max-width:100% !important;
-        max-height:50px !important;
-        width:100% !important;
-        height:auto !important;
-        position:absolute !important;
-	bottom: 0px !important;
-	top: 0px !important;
-	right: 0px !important;
-        left:0px !important
-	color: #ffffff !important;
-	overflow: hidden !important;
-	overflow-y: hidden !important;
-	overflow-x: hidden !important;
-	padding: 0px !important;
-	padding-bottom: 0px !important;
-	padding-top: 0px !important;
-	background: #363636 !important;
-	margin-top: 0px !important;
-        margin-bottom:0px !important;
-        margin-right:0px !important;
-        border-left-color:  white !important;
-	border-left-style: solid  !important;
-	border-left-width: 0px !important;
-	border-right-color:  white !important;
-	border-right-style: solid  !important;
-	border-right-width: 0px  !important;
-	border-top-color:  white !important;
-	border-top-left-radius: 3px !important;
-	border-top-right-radius: 3px !important;
-	border-top-style: solid  !important;
-	border-top-width: 0px  !important;
+    max-width: 100% !important;
+    max-height: 50px !important;
+    width: 100% !important;
+    height: auto !important;
+    position: absolute !important;
+    bottom: 0px !important;
+    top: 0px !important;
+    right: 0px !important;
+    left: 0px !important color: #ffffff !important;
+    overflow: hidden !important;
+    overflow-y: hidden !important;
+    overflow-x: hidden !important;
+    padding: 0px !important;
+    padding-bottom: 0px !important;
+    padding-top: 0px !important;
+    background: #363636 !important;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+    margin-right: 0px !important;
+    border-left-color: white !important;
+    border-left-style: solid  !important;
+    border-left-width: 0px !important;
+    border-right-color: white !important;
+    border-right-style: solid  !important;
+    border-right-width: 0px  !important;
+    border-top-color: white !important;
+    border-top-left-radius: 3px !important;
+    border-top-right-radius: 3px !important;
+    border-top-style: solid  !important;
+    border-top-width: 0px  !important;
 }
 
 .wax-legend .outer {
-    position:absolute !important;
-    bottom:0px !important;
-    top:3px !important;
-    right:3px !important;
-    left:3px !important;
-    bottom:3px !important;
-    height:auto !important;    
+    position: absolute !important;
+    bottom: 0px !important;
+    top: 3px !important;
+    right: 3px !important;
+    left: 3px !important;
+    bottom: 3px !important;
+    height: auto !important;
     padding: 0px !important;
-    max-width:100% !important;
-    max-height:50px !important;
-	background-color: transparent !important;
-	border-bottom-color: white !important;
-	border-bottom-left-radius: 3px !important;
-	border-bottom-right-radius: 3px !important;
-	border-bottom-style: solid !important;
-	border-bottom-width: 1px !important;*/
-	border-left-color:  white !important;
-	border-left-style: solid  !important;
-	border-left-width: 1px !important;
-	border-right-color:  white !important;
-	border-right-style: solid  !important;
-	border-right-width: 1px  !important;
-	border-top-color:  white !important;
-	border-top-left-radius: 3px !important;
-	border-top-right-radius: 3px !important;
-	border-top-style: solid  !important;
-	border-top-width: 1px  !important;
-	border-radius: 3px !important;
-	-moz-border-radius: 3px !important;
-	-webkit-border-radius: 3px !important; }
-
+    max-width: 100% !important;
+    max-height: 50px !important;
+    background-color: transparent !important;
+    border-bottom-color: white !important;
+    border-bottom-left-radius: 3px !important;
+    border-bottom-right-radius: 3px !important;
+    border-bottom-style: solid !important;
+    border-bottom-width: 1px !important;*/
+    border-left-color: white !important;
+    border-left-style: solid  !important;
+    border-left-width: 1px !important;
+    border-right-color: white !important;
+    border-right-style: solid  !important;
+    border-right-width: 1px  !important;
+    border-top-color: white !important;
+    border-top-left-radius: 3px !important;
+    border-top-right-radius: 3px !important;
+    border-top-style: solid  !important;
+    border-top-width: 1px  !important;
+    border-radius: 3px !important;
+    -moz-border-radius: 3px !important;
+    -webkit-border-radius: 3px !important;
+}
 
 .wax-legend .inner {
-    position:absolute !important;
-    bottom:0px !important;
-    top:5px !important;
-    margin-top:4px !important;
-    height:auto !important;
+    position: absolute !important;
+    bottom: 0px !important;
+    top: 5px !important;
+    margin-top: 4px !important;
+    height: auto !important;
     padding: 0px !important;
-    width:100%!important;
-    opacity:1 !important;
-    background-color:transparent!important;
- }
+    width: 100%!important;
+    opacity: 1 !important;
+    background-color: transparent!important;
+}
 
 .wax-legend .my-legend {
-	position:absolute !important;
-	background-color:transparent !important;
-	bottom:0px !important;
-	color: rgb(248, 248, 255) !important;
-	display:block;
-	float: none;
-	height:auto !important;
-	image-rendering: auto;
-	right: 0px !important;
-	letter-spacing: normal;
-	line-height: 20px  !important;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: disc;
-	margin-bottom:0px  !important;
-	margin-right:0px  !important;
-	margin-top:0px  !important;
-	max-height: 50px !important;
-	max-width: 100% !important;
-	min-height: 50px !important;
-	min-width: 100% !important;
-        overflow: hidden !important;
-	overflow-x: hidden !important;
-	overflow-y: hidden !important;
-	padding-bottom: 0px !important;
-	padding-left: 0px !important;
-	padding-right: 0px !important;
-	padding-top: 0px !important;
-	right: 0px  !important;
-	text-align: -moz-center !important;
-        text-align:-webkit-center !important;
-	text-align:center !important;
-	text-decoration: none;
-	text-indent: 0px;
-	text-shadow: none;
-	text-transform: none;
-	top: 0px !important;
-	vertical-align: baseline;
-	visibility: visible;
-	white-space: normal;
-	widows: 2;
-	width: 100%  !important;
-	word-break: normal;
-	word-spacing: 0px;
-	word-wrap: normal;
-	writing-mode: lr-tb;
-	z-index: auto;
-	zoom: 1; }
- 
+    position: absolute !important;
+    background-color: transparent !important;
+    bottom: 0px !important;
+    color: rgb(248, 248, 255) !important;
+    display: block;
+    float: none;
+    height: auto !important;
+    image-rendering: auto;
+    right: 0px !important;
+    letter-spacing: normal;
+    line-height: 20px  !important;
+    list-style-image: none;
+    list-style-position: outside;
+    list-style-type: disc;
+    margin-bottom: 0px  !important;
+    margin-right: 0px  !important;
+    margin-top: 0px  !important;
+    max-height: 50px !important;
+    max-width: 100% !important;
+    min-height: 50px !important;
+    min-width: 100% !important;
+    overflow: hidden !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+    padding-bottom: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    padding-top: 0px !important;
+    right: 0px  !important;
+    text-align: -moz-center !important;
+    text-align: -webkit-center !important;
+    text-align: center !important;
+    text-decoration: none;
+    text-indent: 0px;
+    text-shadow: none;
+    text-transform: none;
+    top: 0px !important;
+    vertical-align: baseline;
+    visibility: visible;
+    white-space: normal;
+    widows: 2;
+    width: 100%  !important;
+    word-break: normal;
+    word-spacing: 0px;
+    word-wrap: normal;
+    writing-mode: lr-tb;
+    z-index: auto;
+    zoom: 1;
+}
+
 .wax-legend .title {
-	position: relative;
-	top: 15% !important;
-	width: 100% !important;
-    font-family:'PT Sans', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Verdana, 'Verdana Ref', sans-serif !important;
-	text-align: center !important;
-	line-height: 12pt;
-	margin-bottom: 8px;
-	font-weight: bold !important;
-	font-size: 36pt !important;
-	background-color: transparent !important;
-	color: #ffffff !important;
+    position: relative;
+    top: 15% !important;
+    width: 100% !important;
+    font-family: 'Pt Sans', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Verdana, 'Verdana Ref', sans-serif !important;
+    text-align: center !important;
+    line-height: 12pt;
+    margin-bottom: 8px;
+    font-weight: bold !important;
+    font-size: 36pt !important;
+    background-color: transparent !important;
+    color: #ffffff !important;
 }
 
 .wax-legend .labels {
-	position: relative;
-	top: 5% !important;
-	right: 0px !important;
-	width: 100% !important;
+    position: relative;
+    top: 5% !important;
+    right: 0px !important;
+    width: 100% !important;
     text-align: center !important;
-	line-height: 12pt;
-	margin-top: 8px;
-	margin-bottom: 8px;
-	font-weight: 800 !important;
-	font-size: 22pt !important;
-	font-style:normal;
-	background-color: transparent !important;
-	color: #ffffff !important;
+    line-height: 12pt;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-weight: 800 !important;
+    font-size: 22pt !important;
+    font-style: normal;
+    background-color: transparent !important;
+    color: #ffffff !important;
 }
 
-
 .wax-legend .description {
-	position: relative;
-	top: 50% !important;
-	max-width: 90% !important;
-        margin:auto !important;
-        text-align: left !important;
-	margin-bottom: 5px !important;
-	background-color: transparent !important;
+    position: relative;
+    top: 50% !important;
+    max-width: 90% !important;
+    margin: auto !important;
+    text-align: left !important;
+    margin-bottom: 5px !important;
+    background-color: transparent !important;
 }
 
 .wax-legend .description p {
-        line-height:12px !important;
-        margin-top:5px !important;
-        margin-bottom:5px !important;
-       }
+    line-height: 12px !important;
+    margin-top: 5px !important;
+    margin-bottom: 5px !important;
+}
 
-.wax-legend a {
-		color:#29A1E1 !important; }
+.wax-legend a { color: #29A1E1 !important }
+
 .wax-legend .source p,
-.wax-legend .source span {
-		line-height: 12px !important;}
-.wax-legend  a:hover {
-	color:#fff!important;
-	}
+
+.wax-legend .source span { line-height: 12px !important }
+
+.wax-legend  a:hover { color: #fff!important }
+
 </style>
