conditional should work now

--- a/occupy-streets/conditional-carto-for-overlay.html
+++ b/occupy-streets/conditional-carto-for-overlay.html
@@ -3,179 +3,179 @@
 	<div class="id">
 		{{{id}}}
 	</div>
-	{{\id}}
+	{{/id}}
 	{{#Title}}
 	<div class="Title">
 		{{{Title}}}
 	</div>
-	{{\Title}}
+	{{/Title}}
 	{{#Founded}}
 	<div class="Founded">
 		{{{Founded}}}
 	</div>
-	{{\Founded}}
+	{{/Founded}}
 	{{#General email address}}
 	<div class="General email address">
 		{{{General email address}}}
 	</div>
-	{{\General email address}}
+	{{/General email address}}
 	{{#General phone}}
 	<div class="General phone">
 		{{{General phone}}}
 	</div>
-	{{\General phone}}
+	{{/General phone}}
 	{{#Location Name -- sub-premise}}
 	<div class="Location Name -- sub-premise">
 		{{{Location Name -- sub-premise}}}
 	</div>
-	{{\Location Name -- sub-premise}}
+	{{/Location Name -- sub-premise}}
 	{{#Address 1 -- thoroughfare}}
 	<div class="Address 1 -- thoroughfare">
 		{{{Address 1 -- thoroughfare}}}
 	</div>
-	{{\Address 1 -- thoroughfare}}
+	{{/Address 1 -- thoroughfare}}
 	{{#Address 2 -- premise}}
 	<div class="Address 2 -- premise">
 		{{{Address 2 -- premise}}}
 	</div>
-	{{\Address 2 -- premise}}
+	{{/Address 2 -- premise}}
 	{{#City -- locality}}
 	<div class="City -- locality">
 		{{{City -- locality}}}
 	</div>
-	{{\City -- locality}}
+	{{/City -- locality}}
 	{{#City (Sub) -- dependent-locality}}
 	<div class="City (Sub) -- dependent-locality">
 		{{{City (Sub) -- dependent-locality}}}
 	</div>
-	{{\City (Sub) -- dependent-locality}}
+	{{/City (Sub) -- dependent-locality}}
 	{{#State -- administrative-area}}
 	<div class="State -- administrative-area">
 		{{{State -- administrative-area}}}
 	</div>
-	{{\State -- administrative-area}}
+	{{/State -- administrative-area}}
 	{{#State (sub) -- sub-administrative-area}}
 	<div class="State (sub) -- sub-administrative-area">
 		{{{State (sub) -- sub-administrative-area}}}
 	</div>
-	{{\State (sub) -- sub-administrative-area}}
+	{{/State (sub) -- sub-administrative-area}}
 	{{#Country -- country}}
 	<div class="Country -- country">
 		{{{Country -- country}}}
 	</div>
-	{{\Country -- country}}
+	{{/Country -- country}}
 	{{#Zip -- postal-code}}
 	<div class="Zip -- postal-code">
 		{{{Zip -- postal-code}}}
 	</div>
-	{{\Zip -- postal-code}}
+	{{/Zip -- postal-code}}
 	{{#Latitude}}
 	<div class="Latitude">
 		{{{Latitude}}}
 	</div>
-	{{\Latitude}}
+	{{/Latitude}}
 	{{#Longitude}}
 	<div class="Longitude">
 		{{{Longitude}}}
 	</div>
-	{{\Longitude}}
+	{{/Longitude}}
 	{{#Occupation description}}
 	<div class="Occupation description">
 		{{{Occupation description}}}
 	</div>
-	{{\Occupation description}}
+	{{/Occupation description}}
 	{{#General Assembly}}
 	<div class="General Assembly">
 		{{{General Assembly}}}
 	</div>
-	{{\General Assembly}}
+	{{/General Assembly}}
 	{{#Donate Information}}
 	<div class="Donate Information">
 		{{{Donate Information}}}
 	</div>
-	{{\Donate Information}}
+	{{/Donate Information}}
 	{{#Occupation website}}
 	<div class="Occupation website">
 		{{{Occupation website}}}
 	</div>
-	{{\Occupation website}}
+	{{/Occupation website}}
 	{{#Additional Occupation websites}}
 	<div class="Additional Occupation websites">
 		{{{Additional Occupation websites}}}
 	</div>
-	{{\Additional Occupation websites}}
+	{{/Additional Occupation websites}}
 	{{#Twitter hashtag(s)}}
 	<div class="Twitter hashtag(s)">
 		{{{Twitter hashtag(s)}}}
 	</div>
-	{{\Twitter hashtag(s)}}
+	{{/Twitter hashtag(s)}}
 	{{#Twitter account(s)}}
 	<div class="Twitter account(s)">
 		{{{Twitter account(s)}}}
 	</div>
-	{{\Twitter account(s)}}
+	{{/Twitter account(s)}}
 	{{#Facebook Page(s)}}
 	<div class="Facebook Page(s)">
 		{{{Facebook Page(s)}}}
 	</div>
-	{{\Facebook Page(s)}}
+	{{/Facebook Page(s)}}
 	{{#Newspaper URL}}
 	<div class="Newspaper URL">
 		{{{Newspaper URL}}}
 	</div>
-	{{\Newspaper URL}}
+	{{/Newspaper URL}}
 	{{#RSS feeds}}
 	<div class="RSS feeds">
 		{{{RSS feeds}}}
 	</div>
-	{{\RSS feeds}}
+	{{/RSS feeds}}
 	{{#Meetup URL}}
 	<div class="Meetup URL">
 		{{{Meetup URL}}}
 	</div>
-	{{\Meetup URL}}
+	{{/Meetup URL}}
 	{{#Youtube channel URLs}}
 	<div class="Youtube channel URLs">
 		{{{Youtube channel URLs}}}
 	</div>
-	{{\Youtube channel URLs}}
+	{{/Youtube channel URLs}}
 	{{#Live video streams}}
 	<div class="Live video streams">
 		{{{Live video streams}}}
 	</div>
-	{{\Live video streams}}
+	{{/Live video streams}}
 	{{#Additional social media sites}}
 	<div class="Additional social media sites">
 		{{{Additional social media sites}}}
 	</div>
-	{{\Additional social media sites}}
+	{{/Additional social media sites}}
 	{{#Physical occupation occurring?}}
 	<div class="Physical occupation occurring?">
 		{{{Physical occupation occurring?}}}
 	</div>
-	{{\Physical occupation occurring?}}
+	{{/Physical occupation occurring?}}
 	{{#Point of contact email addresses}}
 	<div class="Point of contact email addresses">
 		{{{Point of contact email addresses}}}
 	</div>
-	{{\Point of contact email addresses}}
+	{{/Point of contact email addresses}}
 	{{#Occupation Image}}
 	<div class="Occupation Image">
 		{{{Occupation Image}}}
 	</div>
-	{{\Occupation Image}}
+	{{/Occupation Image}}
 	{{#Occupy Directory URL}}
 	<div class="Occupy Directory URL">
 		{{{Occupy Directory URL}}}
 	</div>
-	{{\Occupy Directory URL}}
+	{{/Occupy Directory URL}}
 </div>
 	
 	
 /* ORIGINAL- - - - - - - - - - - - - - - - - - */
 REGEX Used for find and replace 
 find: (\{\{\{)(.*)(\}\}\})
-Replace: \t\{\{#\2\}\}\r\t<div class="\2">\r\t\t\{\{\{\2\}\}\}\r\t</div>\r\t\{\{\\\2\}\}
+Replace: \t\{\{#\2\}\}\r\t<div class="\2">\r\t\t\{\{\{\2\}\}\}\r\t</div>\r\t\{\{/\2\}\}
 <div class="overlaycontainer">
 {{{id}}}
 {{{Title}}}
